--- a/app/views/mvp1/organisation-confirmation-prap.html
+++ b/app/views/mvp1/organisation-confirmation-prap.html
@@ -16,12 +16,19 @@
             html: data["organisation-name"]
         }) }}
 
+        {% if data['contact-1-first-name'] and data['contact-2-first-name'] and data['address-line-1'] %}
         <p>
-            <a href="user-add-user-prap-new" class="govuk-link">Add a user to {{ data['organisation-name'] }}</a></p>
-    
-    <p><a href="dashboard-service-prap" class="govuk-link">Back to dashboard</a></p>
-  </div>
-            
+            <a href="user-add-user-prap-new" class="govuk-link">
+                Add a user to {{ data['organisation-name'] }}
+            </a>
+        </p>
+        {% endif %}
+
+        <p>
+            <a href="dashboard-service-prap" class="govuk-link">
+                Back to dashboard
+            </a>
+        </p>
     </div>
 </div>
 {% endblock %}
