--- a/app/views/mvp1/organisation-add-address-branch.html
+++ b/app/views/mvp1/organisation-add-address-branch.html
@@ -12,49 +12,39 @@
   {% include '../includes/back-button.njk' %}
 {% endblock %}
 
-
 {% block content %}
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
-            <form id="form" method="post" action="organisation-add-address">
-            
+            <form id="form" method="post" action="organisation-add-address-check">
+                {{ govukRadios({
+                    classes: "govuk-radios",
+                    idPrefix: "add-org-address",
+                    name: "add-org-address",
+                    fieldset: {
+                        legend: {
+                            html: '<span class="govuk-caption-l">Add an organisation</span>Do you want to add the organisation’s address now?',
+                            isPageHeading: true,
+                            classes: "govuk-fieldset__legend--l"
+                        }
+                    },
+                    hint: {
+                        text: "You will not be able to add users to this organisation until you add an address."
+                    },
+                    items: [
+                        {
+                            value: "yes",
+                            text: "Yes"
+                        },
+                        {
+                            value: "no",
+                            text: "No, I will add it later"
+                        }
+                    ]
+                }) }}
 
-              
-
-
-                  <form id="form" method="post" action="reinvite-confirm">
-                      {{ govukRadios({
-                          classes: "govuk-radios",
-                          idPrefix: "add-org-address",
-                          name: "add-org-address",
-                          fieldset: {
-                          legend: {
-                              html: '<span class="govuk-caption-l">Add an organisation</span>Do you want to add the organisation’s address now?',
-                              isPageHeading: true,
-                              classes: "govuk-fieldset__legend--l"
-                          }
-                          },
-                          hint: {
-                            text: "You will not be able to add users to this organisation until you add an address."
-                          },
-                          items: [
-                          {
-                              value: "add-org-address-yes",
-                              text: "Yes"
-                          },
-                          {
-                              value: "add-org-address-no",
-                              text: "No, I will add it later"
-                          }
-                          ]
-                      }) }}
-      
-                      <button type="submit" class="govuk-button govuk-!-margin-right-1" id="submit">
-                          Continue
-                      </button>
-                  </form>
-
-
+                <button type="submit" class="govuk-button govuk-!-margin-right-1" id="submit">
+                    Continue
+                </button>
             </form>
         </div>
     </div>
