--- a/app/views/mvp1/organisation-add-contact.html
+++ b/app/views/mvp1/organisation-add-contact.html
@@ -9,78 +9,72 @@
 {% endblock %}
 
 {% block beforeContent %}
-  {% include '../includes/back-button.njk' %}
+    {% include '../includes/back-button.njk' %}
 {% endblock %}
 
-
 {% block content %}
-
-{% if data['add-org-contacts'] == 'add-org-contacts-no' %}
-<script>
-    window.location.href = 'organisation-add-check.html'
-</script>
-{% endif %}
+    {% if data['add-org-contacts'] === 'add-org-contacts-no' %}
+        <script>
+            window.location.href = 'organisation-add-check.html'
+        </script>
+    {% endif %}
 
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
             <form action="organisation-add-additional-contact-branch" method="post" class="form">
-                    {% call govukFieldset({
-                        legend: {
-                            html: '<span class="govuk-caption-l">Add an organisation</span>Add a contact',
-                            isPageHeading: true,
-                            classes: "govuk-fieldset__legend--l"
-                        }
-                    
-                      }) %}
+                {% call govukFieldset({
+                    legend: {
+                        html: '<span class="govuk-caption-l">Add an organisation</span>Add a contact',
+                        isPageHeading: true,
+                        classes: "govuk-fieldset__legend--l"
+                    }
+                    }) %}
 
-                     
-                        {{ govukInput({
-                          label: {
+                    {{ govukInput({
+                        label: {
                             html: 'First name'
-                          },
-                          classes: "govuk-!-width-two-thirds",
-                          id: "contact-1-first-name",
-                          name: "contact-1-first-name"
-                        }) }}
+                        },
+                        classes: "govuk-!-width-two-thirds",
+                        id: "contact-1-first-name",
+                        name: "contact-1-first-name"
+                    }) }}
 
-                        {{ govukInput({
-                          label: {
+                    {{ govukInput({
+                        label: {
                             html: 'Last name'
-                          },
-                          classes: "govuk-!-width-two-thirds",
-                          id: "contact-1-last-name",
-                          name: "contact-1-last-name"
-                        }) }}
-                      
-                        {{ govukInput({
-                          label: {
-                            html: 'Job title (optional)'
-                          },
-                          classes: "govuk-!-width-two-thirds",
-                          id: "contact-1-job-title",
-                          name: "contact-1-job-title"
-                        }) }}
-                      
-                        {{ govukInput({
-                          label: {
-                            text: "Email address"
-                          },
-                          classes: "govuk-!-width-two-thirds",
-                          id: "contact-1-email",
-                          name: "contact-1-email"
-                        }) }}
-                      
-                        {{ govukInput({
-                            label: {
-                              text: "Phone number"
-                            },
-                            classes: "govuk-!-width-two-thirds",
-                            id: "contact-1-phone",
-                            name: "contact-1-phone"
-                          }) }}
+                        },
+                        classes: "govuk-!-width-two-thirds",
+                        id: "contact-1-last-name",
+                        name: "contact-1-last-name"
+                    }) }}
 
-                      
-                      {% endcall %}
+                    {{ govukInput({
+                        label: {
+                            html: 'Job title (optional)'
+                        },
+                        classes: "govuk-!-width-two-thirds",
+                        id: "contact-1-job-title",
+                        name: "contact-1-job-title"
+                    }) }}
+
+                    {{ govukInput({
+                        label: {
+                            text: "Email address"
+                        },
+                        classes: "govuk-!-width-two-thirds",
+                        id: "contact-1-email",
+                        name: "contact-1-email"
+                    }) }}
+
+                    {{ govukInput({
+                        label: {
+                            text: "Phone number"
+                        },
+                        classes: "govuk-!-width-two-thirds",
+                        id: "contact-1-phone",
+                        name: "contact-1-phone"
+                    }) }}
+                {% endcall %}
 
                 {{ govukButton({
                     text: "Continue"
