Force hidden inputs to pass through data to avoid loss

--- a/app/views/mvp1/organisation-add-additional-contact.html
+++ b/app/views/mvp1/organisation-add-additional-contact.html
@@ -70,6 +70,8 @@
                     }) }}
                 {% endcall %}
 
+                {% include './includes/contacts-and-address.html' %}
+
                 {{ govukButton({
                     text: "Continue"
                 }) }}
