--- a/app/views/mvp1/organisation-add-address-only.html
+++ b/app/views/mvp1/organisation-add-address-only.html
@@ -59,6 +59,8 @@
                     }) }}
                 {% endcall %}
 
+                {% include './includes/contacts-and-address.html' %}
+
                 {{ govukButton({
                     text: "Continue"
                 }) }}
