--- a/app/views/mvp1/organisation-add-contact.html
+++ b/app/views/mvp1/organisation-add-contact.html
@@ -76,6 +76,8 @@
                     }) }}
                 {% endcall %}
 
+                {% include './includes/contacts-and-address.html' %}
+
                 {{ govukButton({
                     text: "Continue"
                 }) }}
