--- a/app/views/mvp1/organisation-add-contacts-branch.html
+++ b/app/views/mvp1/organisation-add-contacts-branch.html
@@ -44,6 +44,8 @@
                     ]
                 }) }}
 
+                {% include './includes/contacts-and-address.html' %}
+
                 <button type="submit" class="govuk-button" id="submit">
                     Continue
                 </button>
