--- a/app/views/mvp1/organisation-complete-details.html
+++ b/app/views/mvp1/organisation-complete-details.html
@@ -57,6 +57,8 @@
                     ]
                 }) }}
 
+                {% include './includes/contacts-and-address.html' %}
+
                 {{ govukButton({
                     text: "Continue"
                 }) }}
