--- a/app/views/mvp1/organisation-add-additional-contact-branch.html
+++ b/app/views/mvp1/organisation-add-additional-contact-branch.html
@@ -45,6 +45,8 @@
                     ]
                 }) }}
 
+                {% include './includes/contacts-and-address.html' %}
+
                 <button type="submit" class="govuk-button" id="submit">
                     Continue
                 </button>
