--- a/app/views/mvp1/organisation-add-address-branch.html
+++ b/app/views/mvp1/organisation-add-address-branch.html
@@ -42,6 +42,8 @@
                     ]
                 }) }}
 
+                {% include './includes/contacts-and-address.html' %}
+
                 <button type="submit" class="govuk-button govuk-!-margin-right-1" id="submit">
                     Continue
                 </button>
