--- a/app/views/mvp1/organisation-add-another-additional-contact-branch.html
+++ b/app/views/mvp1/organisation-add-another-additional-contact-branch.html
@@ -12,47 +12,43 @@
   {% include '../includes/back-button.njk' %}
 {% endblock %}
 
-
 {% block content %}
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
             <form action="organisation-add-another-additional-contact" method="post" class="form">
                 {{ govukFieldset({
                     legend: {
-                    html: '<span class="govuk-caption-l">Add an organisation</span>Do you want to add any more contacts for the organisation?',
-                    classes: "govuk-fieldset__legend--l",
-                    isPageHeading: true
+                        html: '<span class="govuk-caption-l">Add an organisation</span>Do you want to add any more contacts for the organisation?',
+                        classes: "govuk-fieldset__legend--l",
+                        isPageHeading: true
                     }
                 })}}
 
                 <span id="dob-hint" class="govuk-hint">
-                  This is optional. You do not have to add more than 2 contacts.
-                  </span>
+                    This is optional. You do not have to add more than 2 contacts.
+                </span>
 
                 {{ govukRadios({
                     classes: "govuk-radios",
                     idPrefix: "add-another-additional-org-contact",
                     name: "add-another-additional-org-contact",
-                    
                     items: [
-                      {
-                        value: "add-another-additional-org-contact-yes",
-                        text: "Yes"
-                      },
-                      {
-                        value: "add-another-additional-org-contact-no",
-                        text: "No"
-                      }
+                        {
+                            value: "add-another-additional-org-contact-yes",
+                            text: "Yes"
+                        },
+                        {
+                            value: "add-another-additional-org-contact-no",
+                            text: "No"
+                        }
                     ]
-                  }) }}
+                }) }}
 
+                {% include './includes/contacts-and-address.html' %}
 
-                  
-                   
-
-                    <button type="submit" class="govuk-button" id="submit">
-                      Continue
-                  </button>
+                <button type="submit" class="govuk-button" id="submit">
+                    Continue
+                </button>
             </form>
         </div>
     </div>
