--- a/app/views/mvp1/user-view.html
+++ b/app/views/mvp1/user-view.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-    User details - {{siteName}}
+    User details - {{ data['user-first-name'] }} {{ data['user-last-name'] }}
 {% endblock %}
 
 {% block header %}
