--- a/app/views/mvp1/user-list-prap-sorted.html
+++ b/app/views/mvp1/user-list-prap-sorted.html
@@ -14,7 +14,7 @@
 
 {% block content %}
     {% set sortFilterHtml %}
-        <form action="user-list-prap-sorted" method="post" id="search-refine" class="govuk-grid-row govuk-!-margin-right-0 govuk-!-margin-left-0 govuk-sort-filter">
+        <form action="user-list-prap" method="post" id="search-refine" class="govuk-grid-row govuk-!-margin-right-0 govuk-!-margin-left-0 govuk-sort-filter">
             <fieldset class="govuk-grid-column-one-half govuk-fieldset">
                 <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
                     Sort results
@@ -61,7 +61,8 @@
                     items: [
                         {
                             value: "az",
-                            text: "A-Z"
+                            text: "A-Z",
+                            checked: true
                         },
                         {
                             value: "za",
@@ -112,7 +113,8 @@
                         },
                         {
                             value: "Capita",
-                            text: "Capita"
+                            text: "Capita",
+                            selected: true
                         },
                         {
                             value: "G4S",
@@ -146,7 +148,8 @@
                         },
                         {
                             value: "active",
-                            text: "active"
+                            text: "active",
+                            selected: true
                         },
                         {
                             value: "inactive",
@@ -192,42 +195,6 @@
             </thead>
 
             <tbody class="govuk-table__body">
-                {% if data["user-first-name"] and data["user-last-name"] %}
-                    <tr class="govuk-table__row">
-                        <th scope="row" class="govuk-table__header">
-                            <a href="user-view" class="govuk-link">
-                                {{ data["user-first-name"] + ' ' + data["user-last-name"] }}
-                            </a>
-                        </th>
-
-                        <td class="govuk-table__cell">
-                            {{ data['organisation-name'] }}
-                        </td>
-
-                        <td class="govuk-table__cell">
-                            Pending activation
-                        </td>
-                    </tr>
-                {% endif %}
-
-                <tr class="govuk-table__row">
-                    <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">David Batty</a></th>
-                    <td class="govuk-table__cell">Capita</td>
-                    <td class="govuk-table__cell">Inactive</td>
-                </tr>
-
-                <tr class="govuk-table__row">
-                    <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Gary Speed</a></th>
-                    <td class="govuk-table__cell">Capita</td>
-                    <td class="govuk-table__cell">Inactive</td>
-                </tr>
-
-                <tr class="govuk-table__row">
-                    <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Gordon Strachan</a></th>
-                    <td class="govuk-table__cell">Capita</td>
-                    <td class="govuk-table__cell">Pending activation</td>
-                </tr>
-
                 <tr class="govuk-table__row">
                     <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Gary McAllister</a></th>
                     <td class="govuk-table__cell">Capita</td>
@@ -269,59 +236,19 @@
                     <td class="govuk-table__cell">Capita</td>
                     <td class="govuk-table__cell ">Active</td>
                 </tr>
+
+                <tr class="govuk-table__row">
+                    <th scope="row" class="govuk-table__header"><a href="user-view" class="govuk-link">Chris Fairclough</a></th>
+                    <td class="govuk-table__cell">Capita</td>
+                    <td class="govuk-table__cell">Active</td>
+                </tr>
             </tbody>
         </table>
 
         <nav role="navigation" aria-label="Pagination">
             <div class="pagination__summary">
-                Showing 1 &ndash; 10 of 74 users
+                Showing 1 &ndash; 8 of 8 users
             </div>
-
-            <ul class="pagination">
-                <li class="pagination__item">
-                    <span class="pagination__link disabled" aria-label="Previous page">
-                        <span aria-hidden="true" role="presentation">&laquo;</span> Previous
-                    </span>
-                </li>
-
-                <li class="pagination__item">
-                    <span class="pagination__link current" aria-label="Page 1">1</span>
-                </li>
-
-                <li class="pagination__item">
-                    <a class="pagination__link" href="user-list-prap-2" aria-label="Page 2">2</a>
-                </li>
-
-                <li class="pagination__item">
-                    <a class="pagination__link" href="user-list-prap-3" aria-label="Page 3">3</a>
-                </li>
-
-                <li class="pagination__item">
-                    <a class="pagination__link" href="user-list-prap-4" aria-label="Page 4">4</a>
-                </li>
-
-                <li class="pagination__item">
-                    <a class="pagination__link" href="user-list-prap-5"  aria-label="Page 5">5</a>
-                </li>
-
-                <li class="pagination__item">
-                    <a class="pagination__link" href="user-list-prap-6" aria-label="Page 6">6</a>
-                </li>
-
-                <li class="pagination__item">
-                    <a class="pagination__link" href="user-list-prap-7" aria-label="Page 7">7</a>
-                </li>
-
-                <li class="pagination__item">
-                    <a class="pagination__link" href="user-list-prap-8" aria-label="Page 8">8</a>
-                </li>
-
-                <li class="pagination__item">
-                    <a class="pagination__link" href="user-list-prap-2" aria-label="Next page">
-                        Next <span aria-hidden="true" role="presentation">&raquo;</span>
-                    </a>
-                </li>
-            </ul>
         </nav>
 
         <p class="govuk-!-margin-top-9">
